# actyxos_data_flow

./: .gitignore  Cargo.toml  Dockerfile  README.md  ax-manifest.yml
examples/finished-goods-1/: logic.rs  model.rs
examples/finished-goods-2/: main.rs  model.rs
examples/machine-dashboard/: logic.rs  main.rs  model.rs
examples/machine-usage/: logic.rs  main.rs  model.rs
machine-dashboard-app/: Dockerfile  build.sh  docker-compose.yml
machine-usage-app/: .gitignore  Dockerfile  Dockerfile.builder  ax-manifest.yml  build.sh  docker-compose.yml
src/: coll.rs  flow.rs  lib.rs  machine.rs  runner.rs
src/db/: mod.rs  mssql.rs  postgre.rs  sqlite.rs
webapp/: .gitignore  ax-manifest.yml  package-lock.json  package.json  tsconfig.json
webapp/src/: App.tsx  index.html  machineFish.ts  root.tsx
